Adds jvm settings and supervisor to docs